--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.5",
     "@mysten/enoki": "^0.3.5",
-    "@mysten/sui": "^1.0.5",
+    "@mysten/sui": "^1.12.0",
+    "@mysten/sui.js": "^0.54.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
